# teddyMPNN

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  python-publish.yaml
configs/: benchmark.yaml  run1_proteinmpnn_full.yaml  run2_ligandmpnn_full.yaml  run3_proteinmpnn_ablation.yaml  run4_ligandmpnn_ablation.yaml  train.yaml
docs/: ARCHITECTURE.md  TECHNICAL_ANALYSIS.md  TESTING.md  WORKPLAN.md
scripts/: generate_foundry_reference.py  generate_test_fixtures.py  launch_training.py  prepare_data.py  run_benchmark.py
src/teddympnn/: __init__.py  __main__.py  cli.py  config.py
src/teddympnn/data/: __init__.py  collator.py  dataset.py  features.py  nvidia_complexes.py  pdb_complexes.py  sampler.py  splits.py  teddymer.py
src/teddympnn/evaluation/: __init__.py  _batch.py  benchmark.py  binding_affinity.py  sequence_recovery.py  skempi.py
src/teddympnn/models/: __init__.py  ligand_mpnn.py  protein_mpnn.py  tokens.py
src/teddympnn/models/layers/: __init__.py  feed_forward.py  graph_embeddings.py  message_passing.py  positional_encoding.py
src/teddympnn/training/: __init__.py  loss.py  scheduler.py  trainer.py
src/teddympnn/weights/: __init__.py  foundry.py  io.py  legacy.py
src/teddympnn/weights/pretrained/: __init__.py
tests/: test_cli.py  test_config.py  test_placeholder.py
tests/data/: test_collator.py  test_dataset.py  test_features.py  test_nvidia_complexes.py  test_pdb_complexes.py  test_sampler.py  test_splits.py  test_teddymer.py
tests/evaluation/: test_benchmark.py  test_binding_affinity.py  test_sequence_recovery.py  test_skempi.py
tests/models/: test_ligand_mpnn.py  test_protein_mpnn.py  test_tokens.py
tests/models/layers/: test_feed_forward.py  test_graph_embeddings.py  test_message_passing.py  test_positional_encoding.py
tests/training/: test_e2e_training.py  test_loss.py  test_scheduler.py  test_trainer.py
tests/validation/: conftest.py  test_foundry_equivalence.py
tests/validation/reference_data/structures/: 1BRS_mini.cif  4GYT_mini.cif
tests/weights/: test_foundry.py  test_io.py  test_legacy.py
