[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teddympnn"
version = "0.0.1"
description = "A message passing neural network for protein-protein interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bryan Briney", email = "briney@scripps.edu" },
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "biopython>=1.80",
    "pdb-tools>=2.5",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pre-commit>=3.0",
]
data = [
    "aiohttp>=3.8",
    "zstandard>=0.20",
]
train = [
    "wandb>=0.15",
]

[project.scripts]
teddympnn = "teddympnn.cli:app"

[project.urls]
Repository = "https://github.com/briney/teddympnn"

# --- Tool Configuration ---

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests that require GPU, pretrained weights, or long runtime",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "Bio.*",
    "pdbtools.*",
    "zstandard",
    "aiohttp",
    "aiohttp.*",
    "wandb",
    "wandb.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/teddympnn"]
artifacts = ["src/teddympnn/weights/pretrained/*.pt"]
